--- a/style.css
+++ b/style.css
@@ -325,6 +325,7 @@
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
+.whatsapp-contact
 .icon-3 i,
 .icon-4 i{
   background-color: #DFF0EE;
@@ -336,11 +337,17 @@
   cursor: pointer;
   margin-bottom: 1rem;
 }
-.icon-3 i{
-  margin-left: 7rem;
+.whatsapp-contact{
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  align-items: center;
 }
-.icon-4 i{
-  margin-left: 9rem;
+.instragram-contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap:1rem;
 }
 .icon-3 i:hover {
   transform: scale(1.1); 
@@ -558,19 +565,20 @@
 .contact-text-1 h2{
   font-size:32px;
 }
-.santos{
-  margin-left: 4rem;
-}
-.aldeota{
-  margin-left: 8rem;
+.adress-contact{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .whatsapp-contact{
   display: flex;
+  flex-direction: row;
   gap: 1rem;
   align-items: center;
 }
 .instragram-contact{
   display: flex;
+  flex-direction: row;
   align-items: center;
   gap:1rem;
 }
