--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
   position: sticky;
   top:0;
   z-index: 100;
-  background-color:#FFFFFF;
+  background-color:#DFF0EE;
 }
 .nav-links{
   display: none;
@@ -720,10 +720,10 @@
   width:650px;
 }
 .main-text h1{
-  font-size:48px;
+  font-size:56px;
 }
 .main-text p{
-  font-size:24px;
+  font-size:32px;
 }
 .hero a{
   height: 88px;
