--- a/style.css
+++ b/style.css
@@ -521,6 +521,7 @@
   max-width: 100%;
   flex-direction: row;
   align-items: flex-start;
+  justify-content: space-between;
 }
 .exams img{
   width:400px;
